--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
           </form>
         </div>
     </nav>
+    <!--Only in mobile-->
+    <div class="mobile">
+      <h1 class="mobile_heading">Shloka <br> Dictonary</h1>
+    </div>
+    <!--Only in mobile-->
 
     <div class="main_img_container">
         <img class="main_img" src="./images/img1.JPG" alt="">
@@ -83,39 +88,38 @@
             <div class="carousel-cell">
                 <img class="flickety-img" src="./images/mahabharat.jpg" alt="">
                 <br><br>
-                <h3>Mahabharat</h3>
-                <p>The epic tale of the Kurukshetra War which was fought between the Kauravas and the Pandavas. Krishna, the avatar of the Hindu deity Vishnu, guides the Pandavas to victory in this war....<a href="https://en.wikipedia.org/wiki/Mahabharata" class="stretched-link">Continue reading on Wikipedia</a></p>
+                <h3>Mahabharata</h3>
+                <p>The epic tale of the Kurukshetra War which was fought between the Kauravas and the Pandavas. Krishna, the avatar of the Hindu deity Vishnu, guides the Pandavas to victory in this war....<a href="https://en.wikipedia.org/wiki/Mahabharata" target="_blank" class="stretched-link">Continue reading on Wikipedia</a></p>
             </div>
             <div class="carousel-cell">
                 <img class="flickety-img" src="./images/krishna.jpg" alt="">
                 <br><br>
                 <h3>Shri Krishna</h3>
-                <p>Krishna is a major deity in Hinduism. He is worshipped as the eighth avatar of Vishnu and also as the supreme God in his own right. He is the god of protection, compassion, tenderness, and love and is one of the most popular and widely revered among Indian divinities....<a href="https://en.wikipedia.org/wiki/Krishna" class="stretched-link">Continue reading on Wikipedia</a></p>
+                <p>Krishna is a major deity in Hinduism. He is worshipped as the eighth avatar of Vishnu and also as the supreme God in his own right. He is the god of protection, compassion, tenderness, and love and is one of the most popular and widely revered among Indian divinities....<a href="https://en.wikipedia.org/wiki/Krishna" target="_blank" class="stretched-link">Continue reading on Wikipedia</a></p>
             </div>
             <div class="carousel-cell">
                 <img class="flickety-img" src="./images/arjun.jpg" alt="">
                 <br><br>
                 <h3>Arjuna</h3>
-                <p>Arjuna, also known as Partha and Dhananjaya, is one of the major characters of ancient Hindu texts including the Bhagavata Purana. He is the third among Pandavas, the five sons of Pandu. In the Mahabharata War, Arjuna was a key warrior from the Pandava side and slew many warriors including Karna....<a href="https://en.wikipedia.org/wiki/Arjuna" class="stretched-link">Continue reading on Wikipedia</a></p>
+                <p>Arjuna, also known as Partha and Dhananjaya, is one of the major characters of ancient Hindu texts including the Bhagavata Purana. He is the third among Pandavas, the five sons of Pandu. In the Mahabharata War, Arjuna was a key warrior from the Pandava side and slew many warriors including Karna....<a href="https://en.wikipedia.org/wiki/Arjuna" target="_blank" class="stretched-link">Continue reading on Wikipedia</a></p>
             </div>
             <div class="carousel-cell">
                 <img class="flickety-img" src="./images/bhim.jpg" alt="">
                 <br><br>
                 <h3>Bhima</h3>
-                <p>Bhima is the second among the five Pandavas. The Mahabharata relates many events that portray the might of Bhima. Bhima was born when Vayu, the wind god, granted a son to Kunti and Pandu. From his childhood, Bhima had a rivalry with his cousins Kauravas, especially Duryodhana. Duryodhana and his uncle, Shakuni, tried to kill Bhima multiple times....<a href="https://en.wikipedia.org/wiki/Bhima" class="stretched-link">Continue reading on Wikipedia</a></p>
+                <p>Bhima is the second among the five Pandavas. The Mahabharata relates many events that portray the might of Bhima. Bhima was born when Vayu, the wind god, granted a son to Kunti and Pandu. From his childhood, Bhima had a rivalry with his cousins Kauravas, especially Duryodhana. Duryodhana and his uncle, Shakuni, tried to kill Bhima multiple times....<a href="https://en.wikipedia.org/wiki/Bhima"  target="_blank" class="stretched-link">Continue reading on Wikipedia</a></p>
             </div>
             <div class="carousel-cell">
                 <img class="flickety-img" src="./images/bhishma.JPG" alt="">
                 <br><br>
                 <h3>Bhishma Pitamah</h3>
-                <p>Bhishma, also known as Pitamaha, Gangaputra and Devavrata, was a statesman of Kuru Kingdom and one of the most powerful warriors in the Hindu epic Mahabharata. He was the eighth and only surviving son of the Kuru King Shantanu and the river goddess Ganga....<a href="https://en.wikipedia.org/wiki/Bhishma" class="stretched-link">Continue reading on Wikipedia</a></p>
+                <p>Bhishma, also known as Pitamaha, Gangaputra and Devavrata, was a statesman of Kuru Kingdom and one of the most powerful warriors in the Hindu epic Mahabharata. He was the eighth and only surviving son of the Kuru King Shantanu and the river goddess Ganga....<a href="https://en.wikipedia.org/wiki/Bhishma" target="_blank" class="stretched-link">Continue reading on Wikipedia</a></p>
             </div>
             <div class="carousel-cell">
                 <img class="flickety-img" src="./images/karna.jpg" alt="">
                 <br><br>
                 <h3>Karna</h3>
-                <p>Karna, also known as Vasusena, Anga-raja, and Radheya, is one of the major characters of the Hindu epic Mahābhārata. He is the son of the sun god- Surya and princess Kunti, and thus a demigod of royal birth. Kunti was granted the boon to bear a child with desired divine qualities from the gods and without much knowledge, Kunti invoked the sun god to confirm it if it was true indeed....<a href="https://en.wikipedia.org/wiki/Karna" class="stretched-link">Continue reading on Wikipedia</a> </p>
-                
+                <p>Karna, also known as Vasusena, Anga-raja, and Radheya, is one of the major characters of the Hindu epic Mahābhārata. He is the son of the sun god- Surya and princess Kunti, and thus a demigod of royal birth. Kunti was granted the boon to bear a child with desired divine qualities from the gods and without much knowledge, Kunti invoked the sun god to confirm it if it was true indeed....<a href="https://en.wikipedia.org/wiki/Karna" target="_blank" class="stretched-link">Continue reading on Wikipedia</a> </p>            
             </div>
         </div>
     </div>
