--- a/index.html
+++ b/index.html
@@ -127,7 +127,12 @@
             </div>
         </div>
     </div>
-
+    <br><br><br><br>
+    <footer>
+      <div class="foot">
+        <a href="">&copy; | Shloka Dictonary</a>
+      </div>
+    </footer>
 
 
 
